fix: align hero part with template pixel perfect, fix background, fonts and color  bugs;

--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -12,24 +12,24 @@ $color-dark-xl: #4C4C4C;
 $color-dark-2xl: #444444;
 $color-dark-3xl: #292929;
 
-$start-screen-gradient-background: url(assets/noise_lines_transparent.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;                                   
-$footer-gradient-background: url(assets/noise_lines_transparent.png), radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%), #211F20;
+$start-screen-gradient-background: url(../../assets/noise_transparent.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;                                   
+$footer-gradient-background: url(../../assets/noise_transparent.png), radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%), #211F20;
 
 @mixin h2 {
     font: {
-        font-family: Georgia;
-        font-weight: 400;
-        font-size: 44px;
+        family: Georgia;
+        weight: 400;
+        size: 44px;
     }
     line-height: 130%;
 }
 
 @mixin h3 {
     font: {
-        font-family: Georgia;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 35px;
+        family: Georgia;
+        style: normal;
+        weight: normal;
+        size: 35px;
     }
     line-height: 130%;
     letter-spacing: 0.06rem;  
@@ -37,10 +37,10 @@ $footer-gradient-background: url(assets/noise_lines_transparent.png), radial-gra
 
 @mixin h4 {
     font: {    
-        font-family: Georgia;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
+        family: Georgia;
+        style: normal;
+        weight: normal;
+        size: 20px;
     }
     line-height: 115%;
     letter-spacing: 0.06rem;  
@@ -48,10 +48,10 @@ $footer-gradient-background: url(assets/noise_lines_transparent.png), radial-gra
 
 @mixin h4 {
     font: {    
-        font-family: Georgia;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 15px;
+        family: Georgia;
+        style: normal;
+        weight: normal;
+        size: 15px;
     }
     line-height: 110%;
     letter-spacing: 0.06rem; 
@@ -59,45 +59,45 @@ $footer-gradient-background: url(assets/noise_lines_transparent.png), radial-gra
 
 @mixin paragraph-l {
     font: {
-        font-family: Arial;
-        font-size: 15px;
+        family: Arial;
+        size: 15px;
     }
     line-height: 160%;
 }
 
 @mixin paragraph-s {
     font: {
-        font-family: Arial;
-        font-style: italic;
-        font-weight: normal;
-        font-size: 12px;
+        family: Arial;
+        style: italic;
+        weight: normal;
+        size: 12px;
     }
     line-height: 150%;
 }
 
 @mixin logo_title {
     font: {
-        font-family: Georgia;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 32px;    
+        family: Georgia;
+        style: normal;
+        weight: normal;
+        size: 32px;    
     }
     line-height: 110%;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.2rem;
 }
 
 @mixin logo_subtitle {
     font: {
-        font-family: Arial;
-        font-size: 13px;
+        family: Arial;
+        size: 13px;
     }
     line-height: 110%;
-    letter-spacing: 0.1rem;  
+    letter-spacing: 0.13rem;  
 }
 
-// :root {
-//     font-size: 10px;
-// }
+:root {
+    font-size: 10px;
+}
 
 * {
 margin: 0;
@@ -123,7 +123,6 @@ box-sizing: border-box;
    display: flex;
 }
 
-
 .wrapper {
     display: flex;
     margin: 0 auto;
@@ -148,10 +147,6 @@ box-sizing: border-box;
     }
 }
 
-
-
-
-
 .menu {
     display: flex;
 }
@@ -172,7 +167,7 @@ box-sizing: border-box;
 
             &_active {
                 border-bottom: solid 3px $color-primary;
-            
+                color: $color-light-s;            
             }
             
             &_disabled {
@@ -182,10 +177,6 @@ box-sizing: border-box;
     }
 }
 
-
-
-
-
 .main {
     display: flex;
     flex-direction: column;    
@@ -194,43 +185,57 @@ box-sizing: border-box;
 .hero {
     display: flex;  
     padding-top: 180px;
-    background: $start-screen-gradient-background;  
-}
+    background: $start-screen-gradient-background; 
+    
+    &__content {
+        display: flex;
+    }
 
-.hero__content {
-    display: flex;
+    &__image-wrapper {
+        display: flex;
+    }
+
+    &__image {
+        width: 100vw;
+        max-width: 698px;
+        max-height: 728px;
+    }
 }
 
 .content-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-bottom: 84px;
+    padding-bottom: 80px;
+    
+    &__title {
+        color: $color-light-xl;
+        max-width: 310px;
+        @include h2();   
+    }
+    
+    &__subtitle {
+        margin-top: 42px;
+        padding-right: 42px;
+        color: $color-dark-s;
+        @include paragraph-l();  
+    }
+    
+    &__button {
+        margin-top: 40px;
+        width: 207px;
+        border-radius: 100px;
+        border: none;
+        padding: 15px 45px;
+        background-color: $color-primary;
+        font-family: Georgia;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 17px;
+        line-height: 130%;
+        letter-spacing: 0.1rem;        
+    }
 }
 
-.content-section__title {
-    color: $color-light-xl;
-    font-family: Georgia, serif;
-    font-size: 44px;
-    line-height: 130%;
-    max-width: 310px;
-    font-weight: 400;    
-}
 
-.content-section__subtitle {
-    margin-top: 42px;
-    color: $color-dark-s;
-    line-height: 160%;
-    font-family: Arial;
-    font-size: 15px;    
-}
-
-.content-section__button {
-    margin-top: 42px;
-    width: 207px;
-    border-radius: 100px;
-    border: none;
-    padding: 15px 45px;
-    background-color: $color-primary;
-}
 
